--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ nav {
 }
 
 .project-Introduction-perfume-img {
-  background-image: url("/img/星際旅行.png");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/homework2-4f72e.appspot.com/o/%E6%98%9F%E9%9A%9B%E6%97%85%E8%A1%8C.png?alt=media&token=948984b9-6ad5-4eae-b040-bf487b9ed3b4");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -135,7 +135,7 @@ nav {
 }
 
 .project-Introduction-drink-img {
-  background-image: url("./img/理財app.png");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/homework2-4f72e.appspot.com/o/%E7%90%86%E8%B2%A1app.png?alt=media&token=738031c8-1df3-4369-8a4d-fba3912abd86");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -148,7 +148,7 @@ nav {
 }
 
 .project-Introduction-game-img {
-  background-image: url("/img/粹究美學.png");
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/homework2-4f72e.appspot.com/o/%E7%B2%B9%E7%A9%B6%E7%BE%8E%E5%AD%B8.png?alt=media&token=f7bd2508-1a8d-4dcf-9199-724053627602");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
