--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
 body {
   font-family: "Tinos", "Noto Sans TC", serif;
 }
@@ -17,10 +18,6 @@ nav {
 .nav-font {
   font-size: 22px;
   padding-bottom: 5px;
-}
-
-.nav-title {
-  font-size: 30px;
 }
 
 /* * 封面 */
@@ -485,7 +482,15 @@ a {
   font-size: 22px;
   color: #919191;
 }
-.vr.phone {
+
+@media (max-width: 1380px) {
+  .blog-flex {
+    flex-direction: column;
+    text-align: center;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 20px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -624,8 +629,60 @@ a {
     order: 2;
   }
 
+  .blog-flex2 {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  .blog-flex .col-lg-1 {
+    order: 1;
+  }
+
+  .blog-flex .blog-flex2 {
+    order: 2;
+  }
+
   .project-Introduction-title {
     padding-top: 40px;
+  }
+
+  /** blog */
+  .nav.flex-column {
+    flex-direction: column;
+  }
+
+  .nav-item {
+    text-align: center;
+  }
+
+  .blog {
+    flex-direction: column-reverse;
+  }
+
+  .blog-flex-column {
+    flex-direction: row !important;
+    padding-top: 20px !important;
+    padding-bottom: 24px !important;
+  }
+
+  .fixed2 {
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: none; /* 隐藏滚动条 - Firefox */
+    -ms-overflow-style: none; /* 隐藏滚动条 - IE and Edge */
+  }
+
+  .fixed2::-webkit-scrollbar {
+    display: none; /* 隐藏滚动条 - Chrome, Safari, Opera */
+  }
+
+  .nav {
+    display: inline-block;
+    padding: 0 10px; /* 添加一些水平间距以增加可点击区域 */
+  }
+
+  .nav-item {
+    display: inline-block;
   }
 }
 
@@ -838,4 +895,60 @@ a {
 
   max-width: 100%;
   height: 1805px;
+}
+
+/* *blog  */
+
+.time {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  padding-right: 16px;
+  color: #5b5b5b;
+}
+
+.blog-title {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+}
+
+.blog-content {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: black;
+}
+
+.blog-title {
+  padding-top: 16px;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 33.6px;
+  text-align: left;
+}
+
+.blog-flex {
+  display: flex;
+  align-items: center;
+}
+
+.blog-flex2 {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 32px;
+}
+
+.blog-img {
+  border-radius: 5px;
+}
+
+.blog {
+  display: flex;
+}
+
+.blog-flex-column {
+  flex-direction: column;
+  padding-top: 80px;
+  font-size: 20px !important;
 }
