modify 首頁 作品集的 maak

--- a/style.css
+++ b/style.css
@@ -1701,3 +1701,37 @@ nav {
 }
 
 /* *終點 */
+.img-border-bottom {
+  position: relative;
+}
+
+.img-border-bottom::after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  right: 0;
+  bottom: 0;
+
+  height: 8px;
+  z-index: -1;
+  background: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/mark.png?raw=true")
+    no-repeat center;
+  background-size: cover;
+}
+
+.work-img-border-bottom {
+  position: relative;
+}
+
+.work-img-border-bottom::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 5px;
+  z-index: 1;
+  background: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/mark.png?raw=true")
+    no-repeat center;
+  background-size: cover;
+}
