--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ nav {
   --bs-gutter-x: 0;
 }
 
+.introduction .row {
+  --bs-gutter-x: 1.5rem;
+}
+
 /* * 開始 首頁 Nav */
 
 .resume-cover-nav-li {
@@ -1701,3 +1705,58 @@ nav {
 }
 
 /* *終點 */
+.img-border-bottom {
+  position: relative;
+}
+
+.img-border-bottom::after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  right: 0;
+  bottom: 10px;
+  height: 8px;
+  z-index: -1;
+  background: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/mark.png?raw=true")
+    no-repeat center;
+  background-size: cover;
+}
+
+.work-img-border-bottom {
+  position: relative;
+}
+
+.work-img-border-bottom::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 1px;
+  height: 4px;
+  z-index: 1;
+  background: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/mark.png?raw=true")
+    no-repeat center;
+  background-size: cover;
+}
+
+.resume-about-content-box {
+  display: flex;
+}
+
+.work-active {
+  display: block;
+}
+
+.work-active2 {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .work-active2 {
+    display: block;
+  }
+
+  .work-active {
+    display: none;
+  }
+}
