--- a/style.css
+++ b/style.css
@@ -9,7 +9,13 @@ body {
 nav {
   padding: 32px !important;
 }
-
+.navbar {
+  position: absolute;
+  background-color: #ffffff;
+  left: 0;
+  right: 0;
+  z-index: 1; /* 确保导航栏在其他内容上方显示 */
+}
 .row {
   --bs-gutter-x: 0;
 }
