--- a/style.css
+++ b/style.css
@@ -808,12 +808,11 @@ nav {
 /* *首頁 服務項目 */
 
 .project-Introduction-serve-img {
-  background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2024%20web-camp/service-item-bg.png?raw=true");
+  width: 100%;
+  height: auto;
+  padding-bottom: 100px;
+  background: linear-gradient(to bottom right, black 50%, #1e1e1e 50%);
   background-size: cover;
-  background-repeat: no-repeat;
-
-  max-width: 100%;
-  height: 1805px;
 }
 
 .service-items-img {
@@ -1376,6 +1375,7 @@ nav {
 }
 
 .serviceProcess .serviceProcess-number {
+  font-family: Tourney sans-serif;
   font-size: 72px;
   font-weight: 400;
   line-height: 86.4px;
